new version of BSSN_RHSs: fix a typo. Now consistent with original version!

--- a/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,9 +828,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warnings below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "^^^ Ignore the minor warnings above. ^^^\n",
+      "\n",
+      "Consistency check between BSSN_RHSs tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "trK_rhs - bssnrhs.trK_rhs = 0\n",
+      "cf_rhs - bssnrhs.cf_rhs = 0\n",
+      "lambda_rhsU[0] - bssnrhs.lambda_rhsU[0] = 0\n",
+      "h_rhsDD[0][0] - bssnrhs.h_rhsDD[0][0] = 0\n",
+      "a_rhsDD[0][0] - bssnrhs.a_rhsDD[0][0] = 0\n",
+      "h_rhsDD[0][1] - bssnrhs.h_rhsDD[0][1] = 0\n",
+      "a_rhsDD[0][1] - bssnrhs.a_rhsDD[0][1] = 0\n",
+      "h_rhsDD[0][2] - bssnrhs.h_rhsDD[0][2] = 0\n",
+      "a_rhsDD[0][2] - bssnrhs.a_rhsDD[0][2] = 0\n",
+      "lambda_rhsU[1] - bssnrhs.lambda_rhsU[1] = 0\n",
+      "h_rhsDD[1][0] - bssnrhs.h_rhsDD[1][0] = 0\n",
+      "a_rhsDD[1][0] - bssnrhs.a_rhsDD[1][0] = 0\n",
+      "h_rhsDD[1][1] - bssnrhs.h_rhsDD[1][1] = 0\n",
+      "a_rhsDD[1][1] - bssnrhs.a_rhsDD[1][1] = 0\n",
+      "h_rhsDD[1][2] - bssnrhs.h_rhsDD[1][2] = 0\n",
+      "a_rhsDD[1][2] - bssnrhs.a_rhsDD[1][2] = 0\n",
+      "lambda_rhsU[2] - bssnrhs.lambda_rhsU[2] = 0\n",
+      "h_rhsDD[2][0] - bssnrhs.h_rhsDD[2][0] = 0\n",
+      "a_rhsDD[2][0] - bssnrhs.a_rhsDD[2][0] = 0\n",
+      "h_rhsDD[2][1] - bssnrhs.h_rhsDD[2][1] = 0\n",
+      "a_rhsDD[2][1] - bssnrhs.a_rhsDD[2][1] = 0\n",
+      "h_rhsDD[2][2] - bssnrhs.h_rhsDD[2][2] = 0\n",
+      "a_rhsDD[2][2] - bssnrhs.a_rhsDD[2][2] = 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 9: We already have SymPy expressions for BSSN RHS expressions\n",
     "#         in terms of other SymPy variables. Even if we reset the \n",
@@ -859,17 +895,17 @@
     "\n",
     "print(\"Consistency check between BSSN_RHSs tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
-    "# print(\"trK_rhs - bssnrhs.trK_rhs = \" + str(trK_rhs - bssnrhs.trK_rhs))\n",
-    "# print(\"cf_rhs - bssnrhs.cf_rhs = \" + str(cf_rhs - bssnrhs.cf_rhs))\n",
+    "print(\"trK_rhs - bssnrhs.trK_rhs = \" + str(trK_rhs - bssnrhs.trK_rhs))\n",
+    "print(\"cf_rhs - bssnrhs.cf_rhs = \" + str(cf_rhs - bssnrhs.cf_rhs))\n",
     "\n",
     "for i in range(DIM):\n",
-    "#     print(\"lambda_rhsU[\"+str(i)+\"] - bssnrhs.lambda_rhsU[\"+str(i)+\"] = \" + \n",
-    "#           str(lambda_rhsU[i] - bssnrhs.lambda_rhsU[i]))\n",
-    "     for j in range(DIM):\n",
+    "    print(\"lambda_rhsU[\"+str(i)+\"] - bssnrhs.lambda_rhsU[\"+str(i)+\"] = \" + \n",
+    "          str(lambda_rhsU[i] - bssnrhs.lambda_rhsU[i]))\n",
+    "    for j in range(DIM):\n",
     "        print(\"h_rhsDD[\"+str(i)+\"][\"+str(j)+\"] - bssnrhs.h_rhsDD[\"+str(i)+\"][\"+str(j)+\"] = \" \n",
     "              + str(h_rhsDD[i][j] - bssnrhs.h_rhsDD[i][j]))\n",
-    "#         print(\"a_rhsDD[\"+str(i)+\"][\"+str(j)+\"] - bssnrhs.a_rhsDD[\"+str(i)+\"][\"+str(j)+\"] = \" \n",
-    "#               + str(a_rhsDD[i][j] - bssnrhs.a_rhsDD[i][j]))"
+    "        print(\"a_rhsDD[\"+str(i)+\"][\"+str(j)+\"] - bssnrhs.a_rhsDD[\"+str(i)+\"][\"+str(j)+\"] = \" \n",
+    "              + str(a_rhsDD[i][j] - bssnrhs.a_rhsDD[i][j]))"
    ]
   },
   {
@@ -884,9 +920,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb to latex\n",
+      "[NbConvertApp] Writing 97439 bytes to Tutorial-BSSN_time_evolution-BSSN_RHSs.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-BSSN_time_evolution-BSSN_RHSs.tex\n",
