New BSSN tutorials: Make formatting consistent and add to NRPyPlus_Tutorial main directory

--- a/Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<font color='green'>**All expressions generated in this module have been validated against a trusted code (the original NRPy+/SENR code, which itself was validated against [Baumgarte's code](https://arxiv.org/abs/1211.6632)).**</font>\n",
     "\n",
-    "## Python module containing the final expressions constructed here: [BSSN/BSSN_RHSs_gauge.py](../edit/BSSN/BSSN_RHSs_gauge.py)\n",
+    "## Python module containing the final expressions constructed here: [BSSN/BSSN_gauge_RHSs.py](../edit/BSSN/BSSN_gauge_RHSs.py)\n",
     "\n",
     "### Author: Zach Etienne\n",
     "\n",
@@ -28,7 +28,7 @@
     "1. [Step 3](#shiftconditions): Right-hand side of $\\partial_t \\beta^i$: Second-order Gamma-driving shift conditions\n",
     "    1. [Step 3.a](#origgammadriving): Original, non-covariant Gamma-driving shift condition\n",
     "    1. [Step 3.b](#covgammadriving): [Brown](https://arxiv.org/abs/0902.3652)'s suggested covariant Gamma-driving shift condition\n",
-    "1. [Step 4](#rescale): \n",
+    "1. [Step 4](#rescale): Rescale right-hand sides of BSSN gauge equations\n",
     "1. [Step 5](#code_validation): Code Validation against BSSN.BSSN_gauge_RHSs NRPy+ module\n",
     "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
@@ -103,7 +103,7 @@
     "# Step 2: Right-hand side $\\partial_t \\alpha$: the $1+\\log$ lapse condition \\[Back to [top](#toc)\\]\n",
     "$$\\label{lapseconditions}$$\n",
     "\n",
-    "The [$1=\\log$ lapse condition](https://arxiv.org/abs/gr-qc/0206072) is a member of the [Bona-Masso family of lapse choices](https://arxiv.org/abs/gr-qc/9412071), which has the desirable property of singularity avoidance. As is common (e.g., see [Campanelli *et al* (2005)](https://arxiv.org/abs/gr-qc/0511048)), we make the replacement $\\partial_t \\to \\partial_0 = \\partial_t + \\beta^i \\partial_i$ to ensure lapse characteristics advect with the shift:\n",
+    "The [$1=\\log$ lapse condition](https://arxiv.org/abs/gr-qc/0206072) is a member of the [Bona-Masso family of lapse choices](https://arxiv.org/abs/gr-qc/9412071), which has the desirable property of singularity avoidance. As is common (e.g., see [Campanelli *et al* (2005)](https://arxiv.org/abs/gr-qc/0511048)), we make the replacement $\\partial_t \\to \\partial_0 = \\partial_t + \\beta^i \\partial_i$ to ensure lapse characteristics advect with the shift. The bracketed term in the $1+\\log$ lapse condition below encodes the shift advection term:\n",
     "\n",
     "\\begin{align}\n",
     "\\partial_0 \\alpha &= -2 \\alpha K \\\\\n",
