--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Trumpet_BH_initial_data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Trumpet_BH_initial_data.ipynb
@@ -15,7 +15,7 @@
     "### NRPy+ Source Code for this module: \n",
     "1. [BSSN/StaticTrumpet.py](../edit/BSSN/StaticTrumpet.py); [\\[**tutorial**\\]](Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb): \"Static\" Trumpet black hole initial data; sets all ADM variables in Spherical basis: \n",
     "1. [BSSN/ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear.py](../edit/BSSN/ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear.py); [\\[**tutorial**\\]](Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb): *Exact* Spherical ADM$\\to$Curvilinear BSSN converter function\n",
-    "1. [BSSN/BSSN_Constraints.py](../edit/BSSN/BSSNConstraints.py); [\\[**tutorial**\\]](Tutorial-BSSNConstraints.ipynb): Hamiltonian constraint in BSSN curvilinear basis/coordinates\n",
+    "1. [BSSN/BSSN_constraints.py](../edit/BSSN/BSSN_constraints.py); [\\[**tutorial**\\]](Tutorial-BSSN_constraints.ipynb): Hamiltonian constraint in BSSN curvilinear basis/coordinates\n",
     "\n",
     "Here we use NRPy+ to generate initial data for a single trumpet black hole (, [Dennison & Baumgarte, PRD ???](https://arxiv.org/abs/??)).\n",
     "\n",
@@ -47,8 +47,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Wrote to file \"BSSN/xxCart.h\"\n"
      ]
     }
@@ -70,11 +68,6 @@
     "# Then we set the coordinate system for the numerical grid\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
     "rfm.reference_metric() # Create ReU, ReDD needed for rescaling B-L initial data, generating BSSN RHSs, etc.\n",
-    "\n",
-    "# We will need the h_{ij} quantities defined within BSSN_RHSs \n",
-    "#    below when we enforce the gammahat=gammabar constraint\n",
-    "import BSSN.BSSN_RHSs as rhs\n",
-    "rhs.BSSN_RHSs()\n",
     "\n",
     "#################\n",
     "# Next output C headers related to the numerical grids we just set up:\n",
@@ -138,14 +131,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
-      "Finished in 14.6677751541 seconds.\n",
+      "Finished in 8.52564001083 seconds.\n",
       "Output C implementation of Hamiltonian constraint to BSSN/Hamiltonian.h\n"
      ]
     }
    ],
    "source": [
-    "import BSSN.BSSNConstraints as bssncon\n",
+    "import BSSN.BSSN_constraints as bssncon\n",
     "bssncon.output_C__Hamiltonian_h(add_T4UUmunu_source_terms=False)"
    ]
   },
@@ -198,6 +193,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Output C implementation of det(gammabar) constraint to file BSSN/enforce_detgammabar_constraint.h\n"
      ]
     }
@@ -236,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting BSSN/Test_StaticTrumpet.c\n"
+      "Writing BSSN/Test_StaticTrumpet.c\n"
      ]
     }
    ],
@@ -459,8 +456,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mYou are using pip version 18.1, however version 19.0.3 is available.\r\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
+      "\u001b[33mDEPRECATION: Python 2.7 will reach the end of its life on January 1st, 2020. Please upgrade your Python as Python 2.7 won't be maintained after that date. A future version of pip will drop support for Python 2.7.\u001b[0m\n",
+      "\u001b[33mYou are using pip version 19.0.1, however version 19.0.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
