Add AbarDD_dD and AbarDD_dupD to BSSN_quantities. Much more convenient that way.

--- a/Tutorial-ADM_in_terms_of_BSSN.ipynb
+++ b/Tutorial-ADM_in_terms_of_BSSN.ipynb
@@ -86,7 +86,18 @@
     "gammabarDD = Bq.gammabarDD\n",
     "cf         = Bq.cf\n",
     "AbarDD     = Bq.AbarDD\n",
-    "trK        = Bq.trK"
+    "trK        = Bq.trK\n",
+    "\n",
+    "Bq.gammabar__inverse_and_derivs()\n",
+    "gammabarDD_dD  = Bq.gammabarDD_dD\n",
+    "gammabarDD_dDD = Bq.gammabarDD_dDD\n",
+    "\n",
+    "Bq.AbarUU_AbarUD_trAbar_AbarDD_dD()\n",
+    "AbarDD_dD = Bq.AbarDD_dD\n",
+    "\n",
+    "trK_dD = ixp.declarerank1(\"trK_dD\")\n",
+    "cf_dD  = ixp.declarerank1(\"cf_dD\")\n",
+    "cf_dDD = ixp.declarerank2(\"cf_dDD\",\"sym01\")"
    ]
   },
   {
@@ -149,11 +160,11 @@
     "\n",
     "exp4phi = sp.sympify(0)\n",
     "if par.parval_from_str(\"ConformalFactor\") == \"phi\":\n",
-    "    exp4phi = sp.exp(4*cf)\n",
+    "    exp4phi    = sp.exp(4*cf)\n",
     "elif par.parval_from_str(\"ConformalFactor\") == \"chi\":\n",
-    "    exp4phi = (1 / cf)\n",
+    "    exp4phi    = (1 / cf)\n",
     "elif par.parval_from_str(\"ConformalFactor\") == \"W\":\n",
-    "    exp4phi = (1 / cf**2)\n",
+    "    exp4phi    = (1 / cf**2)\n",
     "else:\n",
     "    print(\"Error ConformalFactor type = \\\"\"+par.parval_from_str(\"ConformalFactor\")+\"\\\" unknown.\")\n",
     "    exit(1)            \n",
@@ -161,6 +172,116 @@
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        gammaDD[i][j] = exp4phi*gammabarDD[i][j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1.a: Derivatives of $e^{4\\phi}$\n",
+    "\n",
+    "To compute derivatives of $\\gamma_{ij}$ in terms of BSSN variables and their derivatives, we will first need derivatives of $e^{4\\phi}$ in terms of the conformal BSSN variable $\\text{cf}$.\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\frac{\\partial}{\\partial x^i} e^{4\\phi} &= 4 e^{4\\phi} \\phi_{,i} \\\\\n",
+    "\\implies \\frac{\\partial}{\\partial x^j} \\frac{\\partial}{\\partial x^i} e^{4\\phi} &= \\frac{\\partial}{\\partial x^j} \\left(4 e^{4\\phi} \\phi_{,i}\\right) \\\\\n",
+    "&= 16 e^{4\\phi} \\phi_{,i} \\phi_{,j} + 4 e^{4\\phi}  \\phi_{,ij}\n",
+    "\\end{align}\n",
+    "\n",
+    "Thus computing first and second derivatives of $e^{4\\phi}$ in terms of the BSSN quantity $\\text{cf}$ requires only that we evaluate $\\phi_{,i}$ and $\\phi_{,ij}$ in terms of $e^{4\\phi}$ (computed above in terms of $\\text{cf}$) and derivatives of $\\text{cf}$:\n",
+    "\n",
+    "If \"BSSN_quantities::ConformalFactor\" is set to \"phi\", then\n",
+    "\\begin{align}\n",
+    "\\phi_{,i} &= \\text{cf}_{,i} \\\\\n",
+    "\\phi_{,ij} &= \\text{cf}_{,ij}\n",
+    "\\end{align}\n",
+    "\n",
+    "If \"BSSN_quantities::ConformalFactor\" is set to \"chi\", then\n",
+    "\\begin{align}\n",
+    "\\text{cf} = e^{-4\\phi} \\implies \\text{cf}_{,i} &= -4 e^{-4\\phi} \\phi_{,i} \\\\\n",
+    "\\implies \\phi_{,i} &= -\\frac{e^{4\\phi}}{4} \\text{cf}_{,i} \\\\\n",
+    "\\implies \\phi_{,ij} &= -e^{4\\phi} \\phi_{,j} \\text{cf}_{,i} -\\frac{e^{4\\phi}}{4} \\text{cf}_{,ij}\\\\\n",
+    "&= -e^{4\\phi} \\left(-\\frac{e^{4\\phi}}{4} \\text{cf}_{,j}\\right) \\text{cf}_{,i} -\\frac{e^{4\\phi}}{4} \\text{cf}_{,ij} \\\\\n",
+    "&= \\frac{1}{4} \\left[\\left(e^{4\\phi}\\right)^2 \\text{cf}_{,i} \\text{cf}_{,j} -e^{4\\phi} \\text{cf}_{,ij}\\right] \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "If \"BSSN_quantities::ConformalFactor\" is set to \"W\", then\n",
+    "\\begin{align}\n",
+    "\\text{cf} = e^{-2\\phi} \\implies \\text{cf}_{,i} &= -2 e^{-2\\phi} \\phi_{,i} \\\\\n",
+    "\\implies \\phi_{,i} &= -\\frac{e^{2\\phi}}{2} \\text{cf}_{,i} \\\\\n",
+    "\\implies \\phi_{,ij} &= -e^{2\\phi} \\phi_{,j} \\text{cf}_{,i} -\\frac{e^{2\\phi}}{2} \\text{cf}_{,ij}\\\\\n",
+    "&= -e^{2\\phi} \\left(-\\frac{e^{2\\phi}}{2} \\text{cf}_{,j}\\right) \\text{cf}_{,i} -\\frac{e^{2\\phi}}{2} \\text{cf}_{,ij} \\\\\n",
+    "&= \\frac{1}{2} \\left[e^{4\\phi} \\text{cf}_{,i} \\text{cf}_{,j} -e^{2\\phi} \\text{cf}_{,ij}\\right] \\\\\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp4phidD = ixp.zerorank1()\n",
+    "exp4phidDD = ixp.zerorank2()\n",
+    "if par.parval_from_str(\"ConformalFactor\") == \"phi\":\n",
+    "    for i in range(DIM):\n",
+    "        exp4phidD[i]  = cf_dD[i]\n",
+    "        for j in range(DIM):\n",
+    "            exp4phidDD[i][j] = cf_dDD[i][j]\n",
+    "elif par.parval_from_str(\"ConformalFactor\") == \"chi\":\n",
+    "    for i in range(DIM):\n",
+    "        exp4phidD[i]  = -sp.Rational(1,4)*exp4phi*cf_dD[i]\n",
+    "        for j in range(DIM):\n",
+    "            exp4phidDD[i][j] = sp.Rational(1,4)*( exp4phi**2*cf_dD[i]*cf_dD[j] - exp4phi*cf_dDD[i][j] )\n",
+    "elif par.parval_from_str(\"ConformalFactor\") == \"W\":\n",
+    "    exp2phi = (1 / cf)\n",
+    "    for i in range(DIM):\n",
+    "        exp4phidD[i]  = -sp.Rational(1,2)*exp2phi*cf_dD[i]\n",
+    "        for j in range(DIM):\n",
+    "            exp4phidDD[i][j] = sp.Rational(1,2)*( exp4phi*cf_dD[i]*cf_dD[j] - exp2phi*cf_dDD[i][j] )\n",
+    "else:\n",
+    "    print(\"Error ConformalFactor type = \\\"\"+par.parval_from_str(\"ConformalFactor\")+\"\\\" unknown.\")\n",
+    "    exit(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1.b: Derivatives of the ADM three-metric: $\\gamma_{ij,k}$ and $\\gamma_{ij,kl}$\n",
+    "\n",
+    "Recall the relation between the ADM three-metric $\\gamma_{ij}$, the BSSN conformal three-metric $\\bar{\\gamma}_{i j}$, and the BSSN conformal factor $\\phi$:\n",
+    "\n",
+    "$$\n",
+    "\\gamma_{ij} = e^{4 \\phi} \\bar{\\gamma}_{i j}.\n",
+    "$$\n",
+    "\n",
+    "Now that we have constructed derivatives of $e^{4 \\phi}$ in terms of the chosen BSSN conformal factor $\\text{cf}$, and the [BSSN.BSSN_quantities module](../edit/BSSN/BSSN_quantities.py) ([**tutorial**](Tutorial-BSSN_quantities.ipynb)) defines derivatives of $\\bar{\\gamma}_{ij}$ in terms of rescaled BSSN variables, derivatives of $\\gamma_{ij}$ can be immediately constructed using the product rule:\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\gamma_{ij,k} &= \\left(e^{4 \\phi}\\right)_{,k} \\bar{\\gamma}_{i j} + e^{4 \\phi} \\bar{\\gamma}_{ij,k} \\\\\n",
+    "\\gamma_{ij,kl} &= \\left(e^{4 \\phi}\\right)_{,kl} \\bar{\\gamma}_{i j} + \\left(e^{4 \\phi}\\right)_{,k} \\bar{\\gamma}_{i j,l} + \\left(e^{4 \\phi}\\right)_{,l} \\bar{\\gamma}_{ij,k} + e^{4 \\phi} \\bar{\\gamma}_{ij,kl}\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gammaDDdD  = ixp.zerorank3()\n",
+    "gammaDDdDD = ixp.zerorank4()\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            gammaDDdD[i][j][k] = exp4phidD[k]*gammabarDD[i][j] + exp4phi*gammabarDD_dD[i][j][k]\n",
+    "            for l in range(DIM):\n",
+    "                gammaDDdDD[i][j][k][l] = exp4phidDD[k][l]*gammabarDD[i][j] + \\\n",
+    "                                         exp4phidD[k]*gammabarDD_dD[i][j][l] + \\\n",
+    "                                         exp4phidD[l]*gammabarDD_dD[i][j][k] + \\\n",
+    "                                         exp4phi*gammabarDD_dDD[i][j][k][l]"
    ]
   },
   {
@@ -177,12 +298,18 @@
     "\\begin{align}\n",
     "K_{ij} &= \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)^{1/3} \\bar{A}_{ij} + \\frac{1}{3} \\gamma_{ij} K \\\\\n",
     "&= e^{4\\phi} \\bar{A}_{ij} + \\frac{1}{3} \\gamma_{ij} K \\\\\n",
-    "\\end{align}"
+    "\\end{align}\n",
+    "\n",
+    "We only compute first spatial derivatives of $K_{ij}$, as higher-derivatives are generally not needed:\n",
+    "$$\n",
+    "K_{ij,k} = \\left(e^{4\\phi}\\right)_{,k} \\bar{A}_{ij} + e^{4\\phi} \\bar{A}_{ij,k} + \\frac{1}{3} \\left(\\gamma_{ij,k} K + \\gamma_{ij} K_{,k}\\right)\n",
+    "$$\n",
+    "which is expressed in terms of quantities already defined."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +317,14 @@
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        KDD[i][j] = exp4phi*AbarDD[i][j] + sp.Rational(1,3)*gammaDD[i][j]*trK"
+    "        KDD[i][j] = exp4phi*AbarDD[i][j] + sp.Rational(1,3)*gammaDD[i][j]*trK\n",
+    "\n",
+    "KDDdD = ixp.zerorank3()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            KDDdD[i][j][k] = exp4phidD[k]*AbarDD[i][j] + exp4phi*AbarDDdD[i][j][k] + \\\n",
+    "                             sp.Rational(1,3)*(gammaDDdD[i][j][k]*trK + gammaDD[i][j]*trKdD[k])"
    ]
   },
   {
@@ -216,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +359,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-ADM_in_terms_of_BSSN.ipynb to latex\r\n"
+      "[NbConvertApp] Converting notebook Tutorial-ADM_in_terms_of_BSSN.ipynb to latex\n",
+      "[NbConvertApp] Writing 39174 bytes to Tutorial-ADM_in_terms_of_BSSN.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
      ]
     }
    ],
