--- a/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "# Step 2.b.i: First import \\bar{A}_{ij} = AbarDD[i][j], and its contraction trAbar = \\bar{A}^k_k\n",
     "#           from BSSN.BSSN_quantities\n",
-    "Bq.AbarUU_AbarUD_trAbar()\n",
+    "Bq.AbarUU_AbarUD_trAbar_AbarDD_dD()\n",
     "trAbar = Bq.trAbar\n",
     "\n",
     "# Step 2.b.ii: Import detgammabar quantities from BSSN.BSSN_quantities:\n",
@@ -293,13 +293,7 @@
     "# Step 3.a: First term of \\partial_t \\bar{A}_{i j}:\n",
     "# \\beta^k \\partial_k \\bar{A}_{ij} + \\partial_i \\beta^k \\bar{A}_{kj} + \\partial_j \\beta^k \\bar{A}_{ik}\n",
     "\n",
-    "# First define aDD_dupD:\n",
-    "AbarDD_dupD = ixp.zerorank3()\n",
-    "aDD_dupD = ixp.declarerank3(\"aDD_dupD\",\"sym01\")\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            AbarDD_dupD[i][j][k] += aDD_dupD[i][j][k]*rfm.ReDD[i][j] + aDD[i][j]*rfm.ReDDdD[i][j][k]\n",
+    "AbarDD_dupD = Bq.AbarDD_dupD # From Bq.AbarUU_AbarUD_trAbar_AbarDD_dD()\n",
     "\n",
     "Abar_rhsDD = ixp.zerorank2()\n",
     "for i in range(DIM):\n",
@@ -922,24 +916,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb to latex\n",
-      "[NbConvertApp] Writing 99653 bytes to Tutorial-BSSN_time_evolution-BSSN_RHSs.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb to latex\r\n"
      ]
     }
    ],
