Tutorial-ADM_in_terms_of_BSSN: new module complete

--- a/Tutorial-ADM_in_terms_of_BSSN.ipynb
+++ b/Tutorial-ADM_in_terms_of_BSSN.ipynb
@@ -271,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2.b: Derivatives of \n",
+    "# Step 2.b: Derivatives of gammaDD, the ADM three-metric\n",
     "gammaDDdD  = ixp.zerorank3()\n",
     "gammaDDdDD = ixp.zerorank4()\n",
     "\n",
@@ -345,6 +345,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warnings below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "^^^ Ignore the minor warnings above. ^^^\n",
+      "\n",
+      "ALL TESTS PASSED!\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_passed=True\n",
+    "def comp_func(expr1,expr2,basename,prefixname2=\"Bq.\"):\n",
+    "    if str(expr1-expr2)!=\"0\":\n",
+    "        print(basename+\" - \"+prefixname2+basename+\" = \"+ str(expr1-expr2))\n",
+    "        all_passed=False\n",
+    "\n",
+    "def gfnm(basename,idx1,idx2=None,idx3=None,idx4=None):\n",
+    "    if idx2==None:\n",
+    "        return basename+\"[\"+str(idx1)+\"]\"\n",
+    "    if idx3==None:\n",
+    "        return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"]\"\n",
+    "    if idx4==None:\n",
+    "        return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"][\"+str(idx3)+\"]\"\n",
+    "    return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"][\"+str(idx3)+\"][\"+str(idx4)+\"]\"\n",
+    "\n",
+    "expr_list = []\n",
+    "exprcheck_list = []\n",
+    "namecheck_list = []\n",
+    "\n",
+    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
+    "\n",
+    "import BSSN.ADM_in_terms_of_BSSN as AB\n",
+    "AB.ADM_in_terms_of_BSSN()\n",
+    "\n",
+    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        namecheck_list.extend([gfnm(\"gammaDD\",i,j),gfnm(\"KDD\",i,j)])\n",
+    "        exprcheck_list.extend([AB.gammaDD[i][j],AB.KDD[i][j]])\n",
+    "        expr_list.extend([gammaDD[i][j],KDD[i][j]])\n",
+    "        for k in range(DIM):\n",
+    "            namecheck_list.extend([gfnm(\"gammaDDdD\",i,j,k),gfnm(\"KDDdD\",i,j,k)])\n",
+    "            exprcheck_list.extend([AB.gammaDDdD[i][j][k],AB.KDDdD[i][j][k]])\n",
+    "            expr_list.extend([gammaDDdD[i][j][k],KDDdD[i][j][k]])\n",
+    "            for l in range(DIM):\n",
+    "                namecheck_list.extend([gfnm(\"gammaDDdDD\",i,j,k,l)])\n",
+    "                exprcheck_list.extend([AB.gammaDDdDD[i][j][k][l]])\n",
+    "                expr_list.extend([gammaDDdDD[i][j][k][l]])\n",
+    "\n",
+    "for i in range(len(expr_list)):\n",
+    "    comp_func(expr_list[i],exprcheck_list[i],namecheck_list[i])\n",
+    "\n",
+    "if all_passed:\n",
+    "    print(\"ALL TESTS PASSED!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -356,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -366,7 +432,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_in_terms_of_BSSN.ipynb to latex\n",
-      "[NbConvertApp] Writing 41755 bytes to Tutorial-ADM_in_terms_of_BSSN.tex\n",
+      "[NbConvertApp] Writing 49045 bytes to Tutorial-ADM_in_terms_of_BSSN.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
