--- a/Tutorial-ADM_in_terms_of_BSSN.ipynb
+++ b/Tutorial-ADM_in_terms_of_BSSN.ipynb
@@ -290,6 +290,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 2.c: Christoffel symbols  $\\Gamma^i_{jk}$  associated with the ADM 3-metric $\\gamma_{ij}$\n",
+    "\n",
+    "The 3-metric analog to the definition of Christoffel symbol (Eq. 1.18) in Baumgarte & Shapiro's *Numerical Relativity* is given by\n",
+    "$$\n",
+    "\\Gamma^i_{jk} = \\frac{1}{2} \\gamma^{il} \\left(\\gamma_{lj,k} + \\gamma_{lk,j} - \\gamma_{jk,l} \\right),\n",
+    "$$\n",
+    "which we implement here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2.c: 3-Christoffel symbols associated with ADM 3-metric gammaDD\n",
+    "# Step 2.c.i: First compute the inverse 3-metric gammaUU:\n",
+    "gammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
+    "\n",
+    "GammaUDD = ixp.zerorank3()\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            for l in range(DIM):\n",
+    "                GammaUDD[i][j][k] += sp.Rational(1,2)*gammaUU[i][l]* \\\n",
+    "                                (gammaDDdD[l][j][k] + gammaDDdD[l][k][j] - gammaDDdD[j][k][l])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='extrinsiccurvature'></a>\n",
     "\n",
     "# Step 3: The ADM extrinsic curvature $K_{ij}$ and its derivatives in terms of rescaled BSSN quantities. \\[Back to [top](#toc)\\]\n",
@@ -311,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -391,13 +424,13 @@
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        namecheck_list.extend([gfnm(\"gammaDD\",i,j),gfnm(\"KDD\",i,j)])\n",
-    "        exprcheck_list.extend([AB.gammaDD[i][j],AB.KDD[i][j]])\n",
-    "        expr_list.extend([gammaDD[i][j],KDD[i][j]])\n",
+    "        namecheck_list.extend([gfnm(\"gammaDD\",i,j),gfnm(\"gammaUU\",i,j),gfnm(\"KDD\",i,j)])\n",
+    "        exprcheck_list.extend([AB.gammaDD[i][j],AB.gammaUU[i][j],AB.KDD[i][j]])\n",
+    "        expr_list.extend([gammaDD[i][j],gammaUU[i][j],KDD[i][j]])\n",
     "        for k in range(DIM):\n",
-    "            namecheck_list.extend([gfnm(\"gammaDDdD\",i,j,k),gfnm(\"KDDdD\",i,j,k)])\n",
-    "            exprcheck_list.extend([AB.gammaDDdD[i][j][k],AB.KDDdD[i][j][k]])\n",
-    "            expr_list.extend([gammaDDdD[i][j][k],KDDdD[i][j][k]])\n",
+    "            namecheck_list.extend([gfnm(\"gammaDDdD\",i,j,k),gfnm(\"GammaUDD\",i,j,k),gfnm(\"KDDdD\",i,j,k)])\n",
+    "            exprcheck_list.extend([AB.gammaDDdD[i][j][k],AB.GammaUDD[i][j][k],AB.KDDdD[i][j][k]])\n",
+    "            expr_list.extend([gammaDDdD[i][j][k],GammaUDD[i][j][k],KDDdD[i][j][k]])\n",
     "            for l in range(DIM):\n",
     "                namecheck_list.extend([gfnm(\"gammaDDdDD\",i,j,k,l)])\n",
     "                exprcheck_list.extend([AB.gammaDDdDD[i][j][k][l]])\n",
@@ -422,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -432,7 +465,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_in_terms_of_BSSN.ipynb to latex\n",
-      "[NbConvertApp] Writing 49045 bytes to Tutorial-ADM_in_terms_of_BSSN.tex\n",
+      "[NbConvertApp] Writing 52776 bytes to Tutorial-ADM_in_terms_of_BSSN.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
