Tutorial-Psi4: start work on contractions

--- a/Tutorial-Psi4.ipynb
+++ b/Tutorial-Psi4.ipynb
@@ -340,7 +340,65 @@
    "metadata": {},
    "source": [
     "# Step 6: Constructing $\\psi_4$ through contractions of the above terms with an arbitrary tetrad\n",
+    "\n",
+    "Eq. 5.1 in [Baker, Campanelli, Lousto (2001)](https://arxiv.org/pdf/gr-qc/0104063.pdf) writes $\\psi_4$ (which is complex) as the contraction of each of the above terms with products of tetrad vectors:\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\psi_4 &= \\left[ {R}_{ijkl}+2K_{i[k}K_{l]j}\\right]\n",
+    "{n}^i\\bar{m}^j{n}^k\\bar{m}^l  \\\\\n",
+    "& -8\\left[ K_{j[k,l]}+{\\Gamma }_{j[k}^pK_{l]p}\\right]\n",
+    "{n}^{[0}\\bar{m}^{j]}{n}^k\\bar{m}^l \\\\\n",
+    "& +4\\left[ {R}_{jl}-K_{jp}K_l^p+KK_{jl}\\right]\n",
+    "{n}^{[0}\\bar{m}^{j]}{n}^{[0}\\bar{m}^{l]},\n",
+    "\\end{align}\n",
+    "where $\\bar{m}^\\mu$ is the complex conjugate of $m^\\mu$, and $n^\\mu$ is real.\n",
+    "\n",
+    "Only $m^\\mu$ is complex, so we can separate the real and imaginary parts of $\\psi_4$ by hand, defining $rm^\\mu$ to now be the real part of $\\bar{m}^\\mu$ and $M^\\mu$ to be the imaginary part. All of the above products are of the form ${n}^\\mu\\bar{m}^\\nu{n}^\\eta\\bar{m}^\\delta$, so let's evalute the real and imaginary parts of this product once, for all such terms:\n",
+    "\n",
+    "$$\n",
+    "{n}^\\mu(m^\\nu - i M^\\nu){n}^\\eta(m^\\delta - i M^\\delta) =\n",
+    "\\left({n}^\\mu m^\\nu {n}^\\eta m^\\delta -\n",
+    "{n}^\\mu M^\\nu {n}^\\eta M^\\delta \\right)+\n",
+    "i \\left(\n",
+    "{n}^\\mu m^\\nu {n}^\\eta M^\\delta -\n",
+    "{n}^\\mu M^\\nu {n}^\\eta m^\\delta \n",
+    "\\right)\n",
+    "$$\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Rem4U = ixp.declarerank1(\"Rem4U\",DIM=4)\n",
+    "Imm4U  = ixp.declarerank1(\"Imm4U\",DIM=4)\n",
+    "n4U   = ixp.declarerank1(\"n4U\",    DIM=4)\n",
+    "\n",
+    "Repsi4 = sp.sympify(0)\n",
+    "Impsi4 = sp.sympify(0)\n",
+    "# First term:\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            for l in range(DIM):\n",
+    "                Repsi4 += rank4term1[i][j][k][l]*n4U[i+1]*m4conjU[j+1]*n4U[k+1]*m4conjU[l+1]\n",
+    "\n",
+    "# Second term:\n",
+    "for j in range(DIM):\n",
+    "    for k in range(DIM):\n",
+    "        for l in range(DIM):\n",
+    "            psi4 += rank3term2[j][k][l] * \\\n",
+    "                    sp.Rational(1,2)*(n4U[0]*m4conjU[j+1] - n4U[j+1]*m4conjU[0])* n4U[k+1]*m4conjU[l+1]\n",
+    "\n",
+    "# Third term:\n",
+    "for j in range(DIM):\n",
+    "    for l in range(DIM):\n",
+    "        psi4 += rank2term3[j][l] * \\\n",
+    "                sp.Rational(1,2)*(n4U[0]*m4conjU[j+1] - n4U[j+1]*m4conjU[0])* \\\n",
+    "                sp.Rational(1,2)*(n4U[0]*m4conjU[l+1] - n4U[l+1]*m4conjU[0])"
    ]
   }
  ],
