Tutorial-Psi4: Finished adding contractions and defining real & imag parts of Psi4

--- a/Tutorial-Psi4.ipynb
+++ b/Tutorial-Psi4.ipynb
@@ -351,54 +351,79 @@
     "& +4\\left[ {R}_{jl}-K_{jp}K_l^p+KK_{jl}\\right]\n",
     "{n}^{[0}\\bar{m}^{j]}{n}^{[0}\\bar{m}^{l]},\n",
     "\\end{align}\n",
-    "where $\\bar{m}^\\mu$ is the complex conjugate of $m^\\mu$, and $n^\\mu$ is real.\n",
+    "where $\\bar{m}^\\mu$ is the complex conjugate of $m^\\mu$, and $n^\\mu$ is real. The third term is given by\n",
+    "\\begin{align}\n",
+    "{n}^{[0}\\bar{m}^{j]}{n}^{[0}\\bar{m}^{l]}\n",
+    "&= \\frac{1}{2}({n}^{0}\\bar{m}^{j} - {n}^{j}\\bar{m}^{0} )\\frac{1}{2}({n}^{0}\\bar{m}^{l} - {n}^{l}\\bar{m}^{0} )\\\\\n",
+    "&= \\frac{1}{4}({n}^{0}\\bar{m}^{j} - {n}^{j}\\bar{m}^{0} )({n}^{0}\\bar{m}^{l} - {n}^{l}\\bar{m}^{0} )\\\\\n",
+    "&= \\frac{1}{4}({n}^{0}\\bar{m}^{j}{n}^{0}\\bar{m}^{l} - {n}^{j}\\bar{m}^{0}{n}^{0}\\bar{m}^{l} - {n}^{0}\\bar{m}^{j}{n}^{l}\\bar{m}^{0} +  {n}^{j}\\bar{m}^{0}{n}^{l}\\bar{m}^{0})\n",
+    "\\end{align}\n",
     "\n",
-    "Only $m^\\mu$ is complex, so we can separate the real and imaginary parts of $\\psi_4$ by hand, defining $rm^\\mu$ to now be the real part of $\\bar{m}^\\mu$ and $M^\\mu$ to be the imaginary part. All of the above products are of the form ${n}^\\mu\\bar{m}^\\nu{n}^\\eta\\bar{m}^\\delta$, so let's evalute the real and imaginary parts of this product once, for all such terms:\n",
+    "Only $m^\\mu$ is complex, so we can separate the real and imaginary parts of $\\psi_4$ by hand, defining $M^\\mu$ to now be the real part of $\\bar{m}^\\mu$ and $\\mathcal{M}^\\mu$ to be the imaginary part. All of the above products are of the form ${n}^\\mu\\bar{m}^\\nu{n}^\\eta\\bar{m}^\\delta$, so let's evalute the real and imaginary parts of this product once, for all such terms:\n",
     "\n",
-    "$$\n",
-    "{n}^\\mu(m^\\nu - i M^\\nu){n}^\\eta(m^\\delta - i M^\\delta) =\n",
-    "\\left({n}^\\mu m^\\nu {n}^\\eta m^\\delta -\n",
-    "{n}^\\mu M^\\nu {n}^\\eta M^\\delta \\right)+\n",
+    "\\begin{align}\n",
+    "{n}^\\mu\\bar{m}^\\nu{n}^\\eta\\bar{m}^\\delta\n",
+    "&= {n}^\\mu(M^\\nu - i \\mathcal{M}^\\nu){n}^\\eta(M^\\delta - i \\mathcal{M}^\\delta) \\\\\n",
+    "&= \\left({n}^\\mu M^\\nu {n}^\\eta M^\\delta -\n",
+    "{n}^\\mu \\mathcal{M}^\\nu {n}^\\eta \\mathcal{M}^\\delta \\right)+\n",
     "i \\left(\n",
-    "{n}^\\mu m^\\nu {n}^\\eta M^\\delta -\n",
-    "{n}^\\mu M^\\nu {n}^\\eta m^\\delta \n",
+    "-{n}^\\mu M^\\nu {n}^\\eta \\mathcal{M}^\\delta\n",
+    "-{n}^\\mu \\mathcal{M}^\\nu {n}^\\eta M^\\delta\n",
     "\\right)\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Rem4U = ixp.declarerank1(\"Rem4U\",DIM=4)\n",
-    "Imm4U  = ixp.declarerank1(\"Imm4U\",DIM=4)\n",
-    "n4U   = ixp.declarerank1(\"n4U\",    DIM=4)\n",
+    "mre4U = ixp.declarerank1(\"mre4U\",DIM=4)\n",
+    "mim4U = ixp.declarerank1(\"mim4U\",DIM=4)\n",
+    "n4U   = ixp.declarerank1(\"n4U\"  ,DIM=4)\n",
     "\n",
-    "Repsi4 = sp.sympify(0)\n",
-    "Impsi4 = sp.sympify(0)\n",
+    "def tetrad_product__Real_psi4(n,Mre,Mim,  mu,nu,eta,delta):\n",
+    "    return +n[mu]*Mre[nu]*n[eta]*Mre[delta] - n[mu]*Mim[nu]*n[eta]*Mim[delta]\n",
+    "\n",
+    "def tetrad_product__Imag_psi4(n,Mre,Mim,  mu,nu,eta,delta):\n",
+    "    return -n[mu]*Mre[nu]*n[eta]*Mim[delta] - n[mu]*Mim[nu]*n[eta]*Mre[delta]\n",
+    "\n",
+    "\n",
+    "psi4_re = sp.sympify(0)\n",
+    "psi4_im = sp.sympify(0)\n",
     "# First term:\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            for l in range(DIM):\n",
-    "                Repsi4 += rank4term1[i][j][k][l]*n4U[i+1]*m4conjU[j+1]*n4U[k+1]*m4conjU[l+1]\n",
+    "                psi4_re += rank4term1[i][j][k][l]*tetrad_product__Real_psi4(n4U,mre4U,mim4U, i+1,j+1,k+1,l+1)\n",
+    "                psi4_im += rank4term1[i][j][k][l]*tetrad_product__Imag_psi4(n4U,mre4U,mim4U, i+1,j+1,k+1,l+1)\n",
     "\n",
     "# Second term:\n",
     "for j in range(DIM):\n",
     "    for k in range(DIM):\n",
     "        for l in range(DIM):\n",
-    "            psi4 += rank3term2[j][k][l] * \\\n",
-    "                    sp.Rational(1,2)*(n4U[0]*m4conjU[j+1] - n4U[j+1]*m4conjU[0])* n4U[k+1]*m4conjU[l+1]\n",
-    "\n",
+    "            psi4_re += rank3term2[j][k][l] * \\\n",
+    "                       sp.Rational(1,2)*(+tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,k+1,l+1) \\\n",
+    "                                         -tetrad_product__Real_psi4(n4U,mre4U,mim4U, j+1,0,k+1,l+1) )\n",
+    "            psi4_im += rank3term2[j][k][l] * \\\n",
+    "                       sp.Rational(1,2)*(+tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,k+1,l+1) \\\n",
+    "                                         -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, j+1,0,k+1,l+1) )\n",
     "# Third term:\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
-    "        psi4 += rank2term3[j][l] * \\\n",
-    "                sp.Rational(1,2)*(n4U[0]*m4conjU[j+1] - n4U[j+1]*m4conjU[0])* \\\n",
-    "                sp.Rational(1,2)*(n4U[0]*m4conjU[l+1] - n4U[l+1]*m4conjU[0])"
+    "        psi4_re += rank2term3[j][l] * \\\n",
+    "                       (sp.Rational(1,4)*(+tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,0,l+1) \\\n",
+    "                                          -tetrad_product__Real_psi4(n4U,mre4U,mim4U, j+1,0,0,l+1) \\\n",
+    "                                          -tetrad_product__Real_psi4(n4U,mre4U,mim4U, 0,j+1,l+1,0) \\\n",
+    "                                          +tetrad_product__Real_psi4(n4U,mre4U,mim4U, j+1,0,l+1,0)))\n",
+    "        psi4_im += rank2term3[j][l] * \\\n",
+    "                       (sp.Rational(1,4)*(+tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,0,l+1) \\\n",
+    "                                          -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, j+1,0,0,l+1) \\\n",
+    "                                          -tetrad_product__Imag_psi4(n4U,mre4U,mim4U, 0,j+1,l+1,0) \\\n",
+    "                                          +tetrad_product__Imag_psi4(n4U,mre4U,mim4U, j+1,0,l+1,0)))"
    ]
   }
  ],
