Tutorial-Psi4: add author

--- a/Tutorial-Psi4.ipynb
+++ b/Tutorial-Psi4.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# $\\psi_4$\n",
     "\n",
-    "### Author: Zach Etienne\n",
+    "### Authors: Zach Etienne & Patrick Nelson\n",
     "\n"
    ]
   },
